# OhMyGene

./: CMakeLists.txt  Makefile  README.md
cpp/: GAbind.cpp  GAbind.hpp
include/: GA.hpp  GAbind.hpp
omg/: parser.py  printer.py  run.py  wrapper.py
src/: CMakeLists.txt  GA.cpp  GAbind.cpp  obj_funcs.cpp
test/: test_GA.py  test_parser.py  test_printer.py
test/cpp/: CMakeLists.txt  GA_test.cc  GAbind_test.cc
test/python3/: test_GA.py  test_parser.py  test_printer.py
